--- a/public/css/home1.css
+++ b/public/css/home1.css
@@ -245,16 +245,14 @@ nav {
     .hero h2{
         font-size: 2.5em;
     }
-    .login a{
-        font-size: 1.2em;
-    }
+  
 }
 
 
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 670px) {
     .login{
-        display: none;
+        font-size: .8em;
     }
     .profile {
         display: grid;
@@ -270,6 +268,11 @@ nav {
     }
     .hero h2{
         font-size: 1.3em;
+    }
+    .sign-in:hover span,
+    .sign-up:hover span {
+        width: 135%;
+        height: 2.5vh;
     }
 }
 
