--- a/public/cssnya/laporan.css
+++ b/public/cssnya/laporan.css
@@ -1,3 +1,58 @@
 body {
-    background-color:  hsl(0, 0%, 94%);
+  background-color:  hsl(0, 0%, 94%);
+}
+.container {
+    z-index: -1;
+    position: absolute;
+    margin-left: 450px;
+}
+.fixed {
+background-color: rgba(0, 0, 0,.9);
+position: absolute;
+min-width: 100%;
+height: 100%;
+
+}
+
+.success-message {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  background-color: #00cdc6;
+  color: #fff;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  width: 30%;
+  position: absolute;
+  margin: 15% auto;
+ margin-left: 550px;
+ 
+}
+
+.success-message i {
+  margin-right: 10px;
+  align-self: center;
+  font-size: 5em;
+}
+.success-message p {
+  text-align: center;
+  margin-top: 20px;
+}
+.success-message .link {
+  text-align: center;
+  color: #00cdc6;
+  background-color: white;
+  min-width: 100px;
+  align-self: center;
+  padding: 2px 2px;
+  text-decoration: none;
+}
+
+.link:hover {
+    background-color: rgb(224, 224, 224);
+    color: #06817d;
+    transition:all .3s ease-out;
 }
