--- a/public/cssnya/home.css
+++ b/public/cssnya/home.css
@@ -14,6 +14,7 @@ body{
     color: white;
     width: 100vw;
     height: 100vh;
+    background-color: rgb(212, 212, 212);
 }
 
 .container {
@@ -70,9 +71,7 @@ nav {
 .brand p span {
     color: #fa7e70;
 }
-.brand p::before{
-  content: url(/img/logo-adura4.png);
-}
+
 
 .sign-in {
     position: relative;
